Ensure sidebar menu does not overlap footer.

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -727,8 +727,6 @@ pre {
   padding: 0;
   font-size: 15px;
 
-  // Enables independant sidebar scrolling
-  overflow-y: auto;
   max-height: calc(100vh - 100px);
 
   h3 {
